# astra-whatsapp-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  config.py  green_api.py  history.py  intents.py  main.py  prompts.py  webhook.py  whatsapp.py
app/ai/: __init__.py  chat.py  image.py  models.py  search.py  stt.py  tts.py  video.py
app/dashboard/: api.py
app/deployment/: manager.py
app/files/: processors.py
app/github/: __init__.py  client.py
app/media/: avatar.py  banner.py  logo.py  sticker.py
app/programming/: api.py  apk.py  generator.py  website.py
app/utils/: database.py  helpers.py  logger.py  security.py
app/web/: currency.py  news.py  translation.py  weather.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
tests/: test_config.py  test_helpers.py  test_intents.py
